- Fixing styles and adding charting dependencies - Implemented sparklines for engagement activity - Improved profile.ejs and posts.ejs formatting and styles

--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -4,3 +4,4 @@
 <!--<link src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.css">-->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/font-awesome.min.css">
