- feed.ejs view improvements on style

--- a/src/views/layouts/layouts-javascripts.ejs
+++ b/src/views/layouts/layouts-javascripts.ejs
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="/js/bootstrap-notify.min.js"></script>
 <script type="text/javascript" src="/js/dayjs.min.js"></script>
 <script type="text/javascript" src="/js/jquery.sparkline.min.js"></script>
-<script type="text/javascript" src="/js/echarts.min.js"></script>
+<!--<script type="text/javascript" src="/js/echarts.min.js"></script>-->
 <script src="/js/feathers.js"></script>
 <script src="/js/socket.io.js"></script>
 <script src="/js/client.js"></script>
